--- a/src/main/webapp/prepros.cfg
+++ b/src/main/webapp/prepros.cfg
@@ -20,22 +20,6 @@
           "parents": [],
           "type": "jsp"
         },
-        "2bb7f80f": {
-          "id": "2bb7f80f",
-          "path": "css/foundation.min.css",
-          "output": "css/foundation.min-dist.css",
-          "name": "foundation.min.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
         "7d4732ee": {
           "id": "7d4732ee",
           "path": "css/main.css",
@@ -122,6 +106,48 @@
           "path": "css/index.css",
           "output": "css/index-dist.css",
           "name": "index.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "b5fa701a": {
+          "id": "b5fa701a",
+          "path": "WEB-INF/views/dashboard.jsp",
+          "output": "WEB-INF/views/dashboard.jsp",
+          "name": "dashboard.jsp",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "jsp"
+        },
+        "d73b3391": {
+          "id": "d73b3391",
+          "path": "js/bootstrap.min.js",
+          "output": "js/bootstrap.min-dist.js",
+          "name": "bootstrap.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "cf710133": {
+          "id": "cf710133",
+          "path": "css/dashboard.css",
+          "output": "css/dashboard-dist.css",
+          "name": "dashboard.css",
           "category": "CSS",
           "autoCompile": false,
           "sourceMaps": false,
